@@ -31,6 +31,9 @@
 
 * Fixed possible memory corruption in the Connect to Server... dialog.
 
+* Support explicit mention of scheme in the Server line of the Connect to
+    Server... dialog, not duplicate it if it's present.
+
 
 Changes on 1.2.3 since 1.2.2:
 
